Sat Aug 11 12:36:02 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* The client's Client ID was created initally from the wrong
	  nickname (it could have been in format nick@host) in the
	  silc_server_new_client.  Affected file silcd/packet_receive.c

Sat Aug 11 00:29:57 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added some SILC_LOG_ERROR's to various error conditions
	  if client could not be added to ID cache.  Affected files
	  silcd/packet_receive.c and silcd/server.c.

	* When client's sock->user_data is freed, NULL also the 
	  client->router and client->connection pointers.  Added check
	  for these pointers being NULL to various places around the
	  code.  Affected file silcd/server.c.

	* Added client->data.registered == TRUE checks to various
	  places around the code to assure that unregistered client's
	  are not handled when it is not allowed.  Affected file
	  silcd/server.c.

	* Added `bool registered' fields to all 
	  silc_idlist_[server|client]_get_* routines to indicate whether
	  the fetched client needs to be registered or not.  Affected
	  file silcd/idlist.[ch].

	* Add your own entry as registered to the ID cache in the
	  server.  Affected file server.c.

	* Fixed a bug in silc_server_new_server.  The SilcServer was
	  set as the new server's context instead of SilcServerEntry.
	  This naturally caused some weird bugs.

Thu Aug  9 18:28:37 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not delete the channel rekey task when adding it
	  for in silc_server_create_channel_key.

	* Changed the silc_server_create_channel_key to return
	  TRUE or FALSE to indicate the success of the channel key
	  creation.

Thu Jul 26 11:32:31 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed MSVC++ project files and added missing files to
	  Makefiles under win32/.

Wed Jul 25 18:43:54 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not add TCP_NODELAY flag if the operating system