@@ -3,6 +3,8 @@ TODO/bugs in Irssi SILC client
 
  o -n and -c options does not work.
 
+ o Switching servers while on channel is supposed to crash the client?
+
  o Add local command to switch the channel's private key when channel has
    several private keys.  Currently sending channel messages with many
    keys is not possible because changing the key is not possible by the
