@@ -1,3 +1,10 @@
+Sun Aug 12 12:28:17 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added couple of return's in rekey protocol if error orccurred
+	  during the protocol.  The execution must be terminated.
+	  Affected file silcd/protocol.c.  Also, terminate the protocol
+	  always with timeout.
+
 Sat Aug 11 12:36:02 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* The client's Client ID was created initally from the wrong
